--- a/Projects/Frontend/bazaar-frontend/src/components/Footer/footer.css
+++ b/Projects/Frontend/bazaar-frontend/src/components/Footer/footer.css
@@ -3,7 +3,7 @@
 
 #footer {
     background: #007b5e !important;
-    padding: 40px;
+    padding: 30px;
 }
 
 #footer h4 {
@@ -24,9 +24,9 @@
 #footer ul.social li a i {
     margin-right: 5px;
 	font-size:25px;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
+	-webkit-transition: .3s all ease;
+	-moz-transition: .3s all ease;
+	transition: .3s all ease;
 }
 #footer ul.social li:hover a i {
 	font-size:30px;
@@ -41,9 +41,9 @@
 }
 #footer ul.quick-links li{
 	padding: 3px 0;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
+	-webkit-transition: .3s all ease;
+	-moz-transition: .3s all ease;
+	transition: .3s all ease;
 }
 #footer ul.quick-links li:hover{
 	padding: 3px 0;
@@ -59,4 +59,9 @@
 
 .footerLower{
     color: white;
+}
+
+.bottomLine{
+	color: white;
+	font-size: smaller;
 }
