--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -139,6 +139,10 @@
                                 <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="sbg-sH-NBX">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <color key="backgroundColor" red="0.96196287869999997" green="0.64012521509999998" blue="0.1448454559" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ndD-4i-lO6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -157,11 +161,15 @@
                             <constraint firstItem="c2c-qR-Fcn" firstAttribute="leading" secondItem="ndD-4i-lO6" secondAttribute="leading" constant="10" id="NeA-c2-9wa"/>
                             <constraint firstAttribute="trailing" secondItem="hJc-iA-Y4Y" secondAttribute="trailing" constant="10" id="Q7a-7u-OcR"/>
                             <constraint firstItem="7YP-nJ-ocK" firstAttribute="top" secondItem="hJc-iA-Y4Y" secondAttribute="bottom" constant="10" id="QZp-Bo-0Es"/>
+                            <constraint firstAttribute="baseline" secondItem="sbg-sH-NBX" secondAttribute="bottom" constant="83" id="W4o-d9-eDW"/>
                             <constraint firstItem="hJc-iA-Y4Y" firstAttribute="leading" secondItem="ndD-4i-lO6" secondAttribute="leading" constant="10" id="WtH-mn-3PE"/>
                             <constraint firstItem="nHk-J4-f5d" firstAttribute="top" secondItem="c2c-qR-Fcn" secondAttribute="bottom" constant="10" id="fAB-A0-YZY"/>
                             <constraint firstAttribute="trailing" secondItem="c2c-qR-Fcn" secondAttribute="trailing" constant="10" id="iPm-vc-3cZ"/>
                             <constraint firstAttribute="bottom" secondItem="7YP-nJ-ocK" secondAttribute="bottom" id="j2W-ps-y55"/>
                             <constraint firstItem="dhL-Ey-KZT" firstAttribute="top" secondItem="c2c-qR-Fcn" secondAttribute="bottom" constant="10" id="j2p-FR-SkI"/>
+                            <constraint firstItem="sbg-sH-NBX" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="jGB-k2-fnx"/>
+                            <constraint firstItem="ndD-4i-lO6" firstAttribute="trailing" secondItem="sbg-sH-NBX" secondAttribute="trailing" id="qpz-z2-yAe"/>
+                            <constraint firstItem="sbg-sH-NBX" firstAttribute="leading" secondItem="ndD-4i-lO6" secondAttribute="leading" id="rCw-Ji-Enr"/>
                             <constraint firstAttribute="trailing" secondItem="7YP-nJ-ocK" secondAttribute="trailing" constant="10" id="rYp-ZP-3wH"/>
                             <constraint firstItem="Igs-5V-SRe" firstAttribute="bottom" secondItem="ndD-4i-lO6" secondAttribute="bottom" id="w8y-qk-VYT"/>
                             <constraint firstAttribute="trailing" secondItem="nHk-J4-f5d" secondAttribute="trailing" constant="10" id="yda-a9-Wef"/>
@@ -173,6 +181,7 @@
                         <outlet property="activityIndicator" destination="RcP-yv-AYF" id="DLA-kL-gIR"/>
                         <outlet property="categoryCollectionView" destination="nHk-J4-f5d" id="rZF-wY-wRh"/>
                         <outlet property="loadingView" destination="dhL-Ey-KZT" id="7QP-x4-kbs"/>
+                        <outlet property="logoImageView" destination="sbg-sH-NBX" id="KSL-j8-fXu"/>
                         <outlet property="productTableView" destination="7YP-nJ-ocK" id="8HZ-pa-ygJ"/>
                         <outlet property="searchBar" destination="8Jt-0n-6Z6" id="k65-IO-miA"/>
                         <outlet property="searchHistoryTableView" destination="Igs-5V-SRe" id="0mt-aj-XBD"/>
@@ -3221,7 +3230,7 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="Dtb-U7-9lN"/>
+        <segue reference="CHd-uw-vgy"/>
         <segue reference="NHr-zy-FFi"/>
         <segue reference="ybP-Ln-r90"/>
     </inferredMetricsTieBreakers>
@@ -3251,8 +3260,8 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <image name="right_arrow" width="64" height="64"/>
         <image name="settings_icon" width="50" height="50"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <image name="xmark.circle" width="13" height="13"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
