--- a/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Sign-In/sign-in.scss
@@ -1,45 +1,46 @@
-.entry-form {
+.signin-form {
     align-content: center;
     margin: auto;
-    max-width: 50rem;
+    max-width: 35rem;
     padding: 15px;
-  }
   
-  .btn-google {
-    margin: auto;
-    margin-top: 15px;
-    color: #F4A133;
   
-  }
-  
-  #submit {
-    background-color: #F4A133;
-    font-weight: 650;
-  }
-  
-  .forgot-password{
-    text-align: right;
-    font-size: 13px;
-    padding-top: 10px;
-    color: #7f7d7d;
-    margin: 0;
-  }
-  
-  .forgot-password a {
-    color: #167bff;
-  }
-
-  #sign-in-div{
-    text-align: center;
-    & #sign-in {
-        border-color: #F4A133;
-        background-color: #F4A133;
-        width: 100%;
-        color: black;
-          &:hover {
-            background-color: #f1ca1a;
+    & .btn-google {
+      margin: auto;
+      margin-top: 15px;
+      color: #F4A133;
     
-            color: black;
+    }
+    
+    & #submit {
+      background-color: #F4A133;
+      font-weight: 650;
+    }
+    
+    & .forgot-password{
+      text-align: right;
+      font-size: 13px;
+      padding-top: 10px;
+      color: #7f7d7d;
+      margin: 0;
+    }
+    
+    & .forgot-password a {
+      color: #167bff;
+    }
+
+    & #sign-in-div{
+      text-align: center;
+      & #sign-in {
+          border-color: #F4A133;
+          background-color: #F4A133;
+          width: 100%;
+          color: black;
+            &:hover {
+              background-color: #f1ca1a;
+      
+              color: black;
+          }
         }
-      }
+  }
 }
