--- a/Projects/Frontend/bazaar-frontend/src/screens/Sign-Up/sign-up.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Sign-Up/sign-up.scss
@@ -1,9 +1,13 @@
-.entry-form {
+.signup-form {
     align-content: center;
     margin: auto;
     max-width: 35rem;
     padding: 15px;
     
+    & h3 {
+      margin-bottom: 25px;
+    }
+
     & .btn-google {
       margin: auto;
       margin-top: 15px;
