--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -788,16 +787,6 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRL-WQ-xqY" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="725.66666666666663"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-97-9MB">
-                                                <rect key="frame" x="143" y="235.66666666666669" width="128" height="30"/>
-                                                <color key="backgroundColor" name="AccentColor"/>
-                                                <state key="normal" title="Go To Vendor Side">
-                                                    <color key="titleColor" red="1" green="0.62352941179999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                </state>
-                                                <connections>
-                                                    <segue destination="2QG-Vt-anv" kind="presentation" identifier="goToVendorSide" modalPresentationStyle="fullScreen" id="sl6-q4-8Qx"/>
-                                                </connections>
-                                            </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="VdA-nE-iRy">
                                                 <rect key="frame" x="124.33333333333333" y="59.999999999999986" width="165.33333333333337" height="165.66666666666663"/>
                                                 <userDefinedRuntimeAttributes>
@@ -954,7 +943,6 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="ntr-J6-vgb" secondAttribute="trailing" constant="20" id="HYF-YH-Tx2"/>
-                                            <constraint firstItem="hfE-97-9MB" firstAttribute="top" secondItem="VdA-nE-iRy" secondAttribute="bottom" constant="10" id="LEV-uy-fBP"/>
                                             <constraint firstItem="ntr-J6-vgb" firstAttribute="top" secondItem="VdA-nE-iRy" secondAttribute="bottom" constant="40" id="UHz-pj-ofi"/>
                                             <constraint firstItem="ntr-J6-vgb" firstAttribute="leading" secondItem="SRL-WQ-xqY" secondAttribute="leading" constant="20" id="Uy0-Br-dpB"/>
                                             <constraint firstItem="VdA-nE-iRy" firstAttribute="top" secondItem="SRL-WQ-xqY" secondAttribute="top" constant="60" id="qm5-Bu-QUa"/>
@@ -992,6 +980,7 @@
                         <outlet property="frameView" destination="ntr-J6-vgb" id="Faj-uy-tBZ"/>
                         <outlet property="passwordTextField" destination="5Go-B8-phC" id="x3e-iD-wIK"/>
                         <outlet property="signInButton" destination="G6R-PD-p89" id="dzK-0e-goW"/>
+                        <segue destination="2QG-Vt-anv" kind="presentation" identifier="goToVendorSide" modalPresentationStyle="fullScreen" id="o2c-Kt-YLX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="to7-4r-ib9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -4004,11 +3993,8 @@
         <image name="right_arrow_blue" width="64" height="64"/>
         <image name="settings_icon" width="50" height="50"/>
         <image name="settings_icon_blue" width="50" height="50"/>
-        <image name="xmark.circle" width="13" height="13"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
-        <namedColor name="AccentColor">
-            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="xmark.circle" width="13" height="13"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
