--- a/Projects/Frontend/bazaar-frontend/src/screens/ViewCategory/view-category.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ViewCategory/view-category.scss
@@ -1,4 +1,5 @@
-.home-wrapper {
+.view-category-wrapper {
+  background-color: #e8ffff;
   & .category-heading {
     text-align: center;  
     margin-bottom: 50px;
@@ -7,7 +8,7 @@
     border: black;
     border-width: 2px;
     border-radius: 5px;
-    background-color: white;
+    background-color: #e8ffff;
   }
 
 }
