--- a/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/Profile-page/profilepage.scss
@@ -6,6 +6,10 @@
     padding-top: 20px;
     padding-bottom: 40px;
 
+    & .alert {
+        text-align: center;
+    }
+
     & .profile-form {
         padding: 15px;
 
